[package]
authors = [
    "Benn Sundsrud <benn.sundsrud@gmail.com>",
    "Cheng JIANG <alex_cj96@foxmail.com>",
]
edition = "2018"
license = "MIT/Apache-2.0"
name    = "ruuls"
version = "0.1.0"


[dependencies]
mustache   = "0.9.0"
reqwest    = { version = "0.10.8", features = ["json", "rustls-tls"] }
serde      = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0.59" }
futures-util = "0.3.8"
thiserror = "1.0.22"
