[package]
authors     = [
    "Benn Sundsrud <benn.sundsrud@gmail.com>",
    "Cheng JIANG <alex_cj96@foxmail.com>",
]
description = "json rules engine"
edition     = "2018"
keywords    = ["json", "rule", "engine"]
license     = "MIT/Apache-2.0"
name        = "json-rules-engine"
repository  = "https://github.com/GopherJ/ruuls-rs"
version     = "0.1.0"

[dependencies]
futures-util = "0.3.8"
mustache     = "0.9.0"
reqwest      = { version = "0.10.8", features = ["json", "rustls-tls"] }
serde        = { version = "1.0.117", features = ["derive"] }
serde_json   = { version = "1.0.59" }
thiserror    = "1.0.22"
